RESOLVED FIXED267601
[GStreamer] Setting playbackRate=0 does not pause video for progressive video playback
https://bugs.webkit.org/show_bug.cgi?id=267601
Summary [GStreamer] Setting playbackRate=0 does not pause video for progressive video...
Enrique Ocaña
Reported 2024-01-16 12:33:13 PST
Setting playbackRate=0 on a regular video doesn't pause the playback. Also, setting playbackRate=1 (or any other value) on a paused video doesn't resume the playback. See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1272
Attachments
Enrique Ocaña
Comment 1 2024-01-16 13:04:59 PST
EWS
Comment 2 2024-01-17 04:40:45 PST
Committed 273125@main (fa338d781046): <https://commits.webkit.org/273125@main> Reviewed commits have been landed. Closing PR #22831 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.